# akri

./: Cargo.toml  out_akri2.yaml
agent/: Cargo.toml
agent/src/util/: config_action.rs  constants.rs  device_plugin_builder.rs  registration.rs  v1beta1.rs
deployment/helm/: values.yaml
discovery-handlers/wasi-debug-echo/: Cargo.toml  build.rs
discovery-handlers/wasi-debug-echo/data/storage/: bacon_ipsum.txt  in.in  out.out
discovery-handlers/wasi-debug-echo/src/: discovery.rs  discovery_grpc.rs  lib.rs  main.rs
discovery-handlers/wde-grpc-proxy/: Cargo.toml
discovery-handlers/wde-grpc-proxy/src/: discovery_handler.rs  main.rs
discovery-utils/: Cargo.toml
discovery-utils/src/: lib.rs
discovery-utils/src/discovery/: mod.rs  v0.rs
