[package]
name = "wasi-debug-echo"
version = "0.1.0"
authors = ["rodz <rodrigo.f.rodrigues@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
anyhow = "1.0.38"
async-trait = "0.1.0"
env_logger = "0.8.3"
futures-util = "0.3"
log = "0.4"
serde = "1.0.104"
serde_json = "1.0.45"
serde_yaml = "0.8.11"
serde_derive = "1.0.104"
tokio = { version = "1.6.0", features = ["sync", "time", "rt", "fs", "macros"] }
protobuf = "2.23"
futures = "~0.3"

[build-dependencies]
protoc-rust-grpc = "~0.8"